# walle_scrap

./: Cargo.toml  urls.json  urls.txt
src/: main.rs
