[package]
name = "walle_scrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" , features = ["json"]}
serde = { version = "1.0.1" , features = ["derive"]}
serde_json = { version = "1.0.1" }
futures = "0.3"
tokio = {version = "1.12.0" , features = ["full"]}


